# rust_git

./: .gitignore  Cargo.toml
src/: bin.rs  git_object.rs  lib.rs  repository.rs  serializer.rs  workspace.rs
src/object/: blob.rs  commit.rs  mod.rs  serialise.rs  tag.rs  tree.rs
src/objects/: blob.rs
