[package]
name = "got"
version = "0.1.0"
edition = "2021"
authors = ["Hector Lorenzo <hello@hectorlorenzo.me>"]

[lib]
name = "gotlib"
path = "src/lib.rs"

[[bin]]
name = "gotbin"
path = "src/bin.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
configparser = "3.0.2"
sha-1 = "0.10.0"
flate2 = "1.0.24"